# necronux

./: AUTHORS.md  Cargo.toml  LEGAL.md  README.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  build-and-release.yml  lint-and-format.yml  release.yml  self-approve.yml  test.yml
src/: cli.rs  controller.rs  logger.rs  main.rs
src/commands/: app.rs  infra.rs  mod.rs  system.rs
src/commands/lvl_0/: global_args.rs  mod.rs  necronux.rs
src/commands/lvl_1/: app.rs  infra.rs  mod.rs  system.rs
src/handlers/: global_args.rs  infra.rs  init.rs  mod.rs
src/handlers/infra/: infra_root.rs  infra_run.rs  infra_run_setup_part_one.rs  mod.rs  run_setup_trinity_helios.rs
src/scripts/common/: necronux_header_info.sh
src/scripts/infra/: trinity_helios_setup_part_one.sh  trinity_helios_setup_part_two.sh
src/tests/: cli_tests.rs  mod.rs
