[package]
name = "necronux"
version = "0.1.0"
authors = ["Nayan (NayanTheSpaceGuy) <nayantsg@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
env_logger = "0.11.5"
log = "0.4.22"

# Optimizations for debug builds using color-eyre
[profile.dev.package.backtrace]
opt-level = 3
