[package]
name = "necronux"
version = "0.1.0"
authors = ["Nayan (NayanTheSpaceGuy) <nayantsg@proton.me>"]
edition = "2021"
homepage = "https://github.com/NayanTheSpaceGuy/necronux"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.2.1"
color-eyre = { version = "0.6.3", default-features = false }
env_logger = "0.11.5"
log = "0.4.22"

[profile.dev.package.backtrace]
# Optimizations for debug builds using color-eyre
opt-level = 3

[profile.release]
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false
